# LearnOpenGL

./: CMakeLists.txt  Main.cpp  README.md
core/header/: camera.h  constant.h  gFunction.h  indexBuffer.h  mesh.h  model.h  renderer.h  shader.h  texture.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
core/src/: camera.cpp  indexBuffer.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
shaders/: cube.fs  cube.vs  model.vs  shader.fs  shader.vs
testUnit/: baseTest.h  testClearColor.cpp  testClearColor.h  testCube.cpp  testCube.h  testMenu.cpp  testMenu.h  testModel.cpp  testModel.h
thridPart/imgui/: imgui_impl_glfw.cpp
thridPart/include/glad/: glad.h
thridPart/src/: glad.c
